...
          }
        }

        Text("Gertrude blocks unwanted stuff, like GIFs, from your device.")
          .font(.system(size: 16, weight: .medium))
          .multilineTextAlignment(self.deviceType() == .pad ? .center : .leading)
          .accessibilityIdentifier("onboarding-screen-hi-there")
          .swooshIn(
            tracking: self.$subtitleOffset,
            to: .zero,
            after: .seconds(1.0),
            for: .milliseconds(800),
          )
...
            self.vanishingAnimations()
            delayed(by: .milliseconds(800)) {
              self.onPrimaryBtnTap()
            }
          },
          variant: .primary,
          accessibilityIdentifier: "btn-primary",
        )
        .swooshIn(
          tracking: self.$buttonOffset,
          to: .zero,
          after: .seconds(1.3),
          for: .milliseconds(800),
...
