import Foundation

extension Array where Element == AlbumData {
  static let previewAlbums: [AlbumData] = [
    .init(
      id: "1",
      title: "Stories from the Outside",
      artist: "Lena Jonsson Trio",
      artworkUrl: URL(string: "https://is1-ssl.mzstatic.com/image/thumb/Music114/v4/7b/8d/ee/7b8dee33-82f2-ec13-fa92-d5904e9915b8/194152231037.png/600x600bb.jpg"),
    ),
    .init(
      id: "2",
      title: "Brewed",
...
