...
    "shows.addShow" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Add Show"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agregar Programa"
...
    "shows.empty.title" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "No shows yet"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Aún no hay programas"
...
    "show.pause" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pause"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Pausar"
...
    "show.playLatest" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Play Latest"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Reproducir Último"
...
    "pin.setPin" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Set PIN"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Establecer PIN"
...
    "pin.confirmPin" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirm PIN"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Confirmar PIN"
...
    "pin.reset.continue" : {
      "extractionState" : "manual",
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continue"
          }
        },
        "es" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Continuar"
...
