...
        $0.data.artworkUrl = .sombrero
        $0.mostRecentPubDate = Date().addingTimeInterval(-TimeInterval.days(2))
        $0.unplayedEpisodes = 15
        $0.totalEpisodes = 87
      },
      showWithStats(id: 3) {
        $0.data.name = "This American Life"
        $0.mostRecentPubDate = Date().addingTimeInterval(-TimeInterval.days(5))
        $0.unplayedEpisodes = 0
        $0.totalEpisodes = 542
      },
    ],
  )
...
